--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -96,7 +96,7 @@ jobs:
       with:
         image: ${{ env.IMAGE_REF }}
         policy: ""
-        identity: ".*"
+        identity: "blah-blah-blah"
         issuer: https://token.actions.githubusercontent.com
         extra-params: --strict --output yaml
 
