--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -28,8 +28,8 @@ jobs:
     - name: Install Cosign
       uses: sigstore/cosign-installer@main
 
-    - name: Install Syft
-      uses: anchore/sbom-action/download-syft@v0.14.3
+    # - name: Install Syft
+    #   uses: anchore/sbom-action/download-syft@v0.14.3
 
     - name: Log in to quay.io
       uses: redhat-actions/podman-login@v1
@@ -54,12 +54,12 @@ jobs:
         image: ${{ steps.build-image.outputs.image }}
         tags: ${{ steps.build-image.outputs.tags }}
 
-    - name: Generate and store SBOM
-      run: |
-          syft "${IMAGE_REGISTRY}/${IMAGE_REPO}@${DIGEST}" -o spdx-json=sbom-spdx.json
-          cosign attest --yes --predicate sbom-spdx.json --type spdx "${IMAGE_REGISTRY}/${IMAGE_REPO}@${DIGEST}"
-      env:
-        DIGEST: ${{ steps.push-image.outputs.digest }}
+    # - name: Generate and store SBOM
+    #   run: |
+    #       syft "${IMAGE_REGISTRY}/${IMAGE_REPO}@${DIGEST}" -o spdx-json=sbom-spdx.json
+    #       cosign attest --yes --predicate sbom-spdx.json --type spdx "${IMAGE_REGISTRY}/${IMAGE_REPO}@${DIGEST}"
+    #   env:
+    #     DIGEST: ${{ steps.push-image.outputs.digest }}
 
   provenance:
     needs: [build]
