--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -85,6 +85,14 @@ jobs:
       IMAGE_REF: ${{ needs.build.outputs.image }}:${{ github.sha }}@${{ needs.build.outputs.digest }}
 
     steps:
+    - name: Validate
+      uses: enterprise-contract/action-validate-image@v1.1
+      with:
+        image: ${{ env.IMAGE_REF }}
+        policy: ""
+        identity: ".*"
+        issuer: https://token.actions.githubusercontent.com
+        extra-params: --strict --output yaml
 
     - name: Clone deployment repo
       uses: actions/checkout@v3
