--- a/.github/workflows/package.yaml
+++ b/.github/workflows/package.yaml
@@ -54,6 +54,11 @@ jobs:
         image: ${{ steps.build-image.outputs.image }}
         tags: ${{ steps.build-image.outputs.tags }}
 
+    - name: Sign image with GitHub OIDC Token
+      run: cosign sign --yes ${IMAGE_REGISTRY}/${IMAGE_REPO}@${DIGEST}
+      env:
+        DIGEST: ${{ steps.push-image.outputs.digest }}
+
     # - name: Generate and store SBOM
     #   run: |
     #       syft "${IMAGE_REGISTRY}/${IMAGE_REPO}@${DIGEST}" -o spdx-json=sbom-spdx.json
